--- a/sites/all/themes/news_center/css/media.css
+++ b/sites/all/themes/news_center/css/media.css
@@ -66,7 +66,8 @@
         flex-wrap: wrap;
     }
 
-    .region-slideshow .block-simpleads {
+    .region-slideshow .block-simpleads,
+    .region-top-area  .block-simpleads {
         width: 100%;
         margin: 1em 0;
     }
