--- a/sites/all/themes/news_center/css/media.css
+++ b/sites/all/themes/news_center/css/media.css
@@ -74,7 +74,7 @@
 
     .region-slideshow .block-simpleads {
         width: 100%;
-        margin: 0;
+        margin: 0 0 1em 0;
     }
 
     .region-slideshow  #block-views-top-news-block {
