--- a/sites/all/themes/news_center/css/media.css
+++ b/sites/all/themes/news_center/css/media.css
@@ -26,9 +26,9 @@
         height: 30px;
     }
 
-    .region-top-area  .block-simpleads {
-        width: 100%;
-        margin: 1em 0;
+    .region-top-area {
+        display: flex;
+        justify-content: space-between;
     }
 
     .region-header {
