--- a/sites/all/themes/news_center/css/styles.css
+++ b/sites/all/themes/news_center/css/styles.css
@@ -297,6 +297,7 @@ blockquote.image-field-caption p {
 
 #footer .region-footer-closure {
     width: 100%;
+    margin: 0;
 }
 
 #footer h1, #footer h2, #footer h3, #footer h4, #footer h5, #footer h6 {
