--- a/sites/all/themes/news_center/css/styles.css
+++ b/sites/all/themes/news_center/css/styles.css
@@ -127,7 +127,7 @@ h2.block-title {
     width: 100%;
 }
 
-#block-views-articles-images-block .views-content {
+#block-views-articles-images-block .view-content {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
