--- a/sites/all/themes/news_center/css/styles.css
+++ b/sites/all/themes/news_center/css/styles.css
@@ -137,6 +137,10 @@ h2.block-title {
     width: 47%;
 }
 
+block-views-articles-images-block .views-row-last {
+    border-bottom: 1px dashed #cccccc;
+}
+
 /* IMAGE FIELD CAPTION */
 .view blockquote.image-field-caption, .node-teaser blockquote.image-field-caption {
     display: none;
