--- a/sites/all/themes/news_center/css/styles.css
+++ b/sites/all/themes/news_center/css/styles.css
@@ -143,7 +143,7 @@ h2.block-title {
     width: 47%;
 }
 
-#block-views-articles-images-block .views-row-last {
+#block-views-articles-images-block .views-row-last.even {
     border-bottom: 1px dashed #cccccc !important;
 }
 
