--- a/sites/all/themes/news_center/css/media.css
+++ b/sites/all/themes/news_center/css/media.css
@@ -69,11 +69,6 @@
         padding: 1em;
     }
 
-    .region-slideshow .block-simpleads {
-        width: 100%;
-        margin: 0 0 1em 0;
-    }
-
     .region-slideshow  #block-views-top-news-block {
         width: 22%;
         flex-grow: 1;
@@ -101,24 +96,14 @@
         margin: 0 0 10px 0;
     }
 
-    /* ad formatting in region-content2 */
-    .region-content2 .block-simpleads > div > div > div >div  {
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: space-between;
-    }
-
-    .region-content2 .simplead-container {
-        width: 48%;
-    }
-
     /* sidebar */
     .region-sidebar-second .block {
         padding: 6px;
         border: 1px solid #ccc;
+        margin-bottom: 1em;
     }
 
-    .region-sidebar-second .block-simpleads {
+    .region-sidebar-second #block-block-8 {
         padding: 0;
         border: none;
     }
@@ -289,22 +274,6 @@
     .region-content0 .block-views.even {
         width: 47%;
         margin-left: 3%;
-    }
-
-    /* ad formatting in region-content2 / sidebar */
-    #ad_groups_33,
-    .region-sidebar-second .block-simpleads > div > div > div >div  {
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: space-between;
-    }
-
-    #ad_groups_33 .simplead-container {
-        width: 31%;
-    }
-
-    .region-sidebar-second .simplead-container {
-        width: 49%;
     }
 
 }
