--- a/sites/all/themes/news_center/css/media.css
+++ b/sites/all/themes/news_center/css/media.css
@@ -1,9 +1,9 @@
 /* wider screens */
-@media only screen and (min-width: 959px) {
+@media only screen and (min-width: 1059px) {
 
     /* cap page width */
     #page {
-        width: 959px;
+        width: 1058px;
         margin: 2em auto;
     }
 
@@ -51,12 +51,12 @@
     }
 
     #main #content {
-        width: 73%;
-        margin-right: 2%;
+        width: 758px;
+        margin-right: 10px;
     }
 
     #main .sidebar {
-        width: 25%;
+        width: 300px;
         margin: 0;
     }
 
@@ -66,11 +66,11 @@
         flex-wrap: wrap;
         margin: 0;
         background-color: rgba(204, 204, 204, 0.15);
-        padding: 1em;
+        padding: 10px;
     }
 
     .region-slideshow  #block-views-top-news-block {
-        width: 22%;
+        width: 20%;
         flex-grow: 1;
         margin-left: 1em;
     }
@@ -94,6 +94,20 @@
         padding: 10px;
         border: 1px solid #ccc;
         margin: 0 0 10px 0;
+    }
+
+    /* bottom content blocks three wide in bottom area */
+    .region-content1 {
+        display: flex;
+        justify-content: space-between;
+        flex-wrap: wrap;
+    }
+
+    .region-content1 .block {
+        width: 29%;
+        padding: 10px;
+        border: 1px solid #ccc;
+        margin: 0;
     }
 
     /* sidebar */
@@ -122,7 +136,7 @@
     #block-views-home-page-block .views-slideshow-controls-bottom,
     #views_slideshow_cycle_main_home_page-block .views-slideshow-cycle-main-frame .views-field-title,
     #block-views-home-page-block .views_slideshow_cycle_main .views-field.views-field-field-image img {
-        width: 462px;
+        width: 442px;
     }
 
     .views_slideshow_cycle_main {
@@ -136,18 +150,14 @@
     /* Main Menu */
     #block-superfish-1, #superfish-1, .superfish-1 {
         background: #000000;
-        display: flex;
+        /*display: flex;*/
         justify-content: space-between;
+        margin-bottom: 0;
+        z-index: 99;
     }
 
     #block-superfish-1 ul li:first-child {
         display: none;
-    }
-
-    #block-superfish-1 {
-        margin-bottom: 0;
-        display: block;
-        z-index: 99;
     }
 
     #block-superfish-1 ul li {
@@ -275,6 +285,18 @@
         width: 47%;
         margin-left: 3%;
     }
+
+    /* bottom content blocks three wide in bottom area */
+    .region-content1 {
+        display: flex;
+        justify-content: space-between;
+        flex-wrap: wrap;
+    }
+
+    .region-content1 .block-views {
+        width: 30%;
+    }
+
 
 }
 
