--- a/sites/all/themes/news_center/css/styles.css
+++ b/sites/all/themes/news_center/css/styles.css
@@ -104,13 +104,15 @@ h2.block-title {
     padding-bottom: 5px;
 }
 
-.region-content0 .block-views .views-field-field-image img {
+.region-content0 .block-views .views-field-field-image img,
+.region-content1 .block-views .views-field-field-image img {
     border: 1px solid #CCCCCC;
     margin-right: 10px;
     padding: 3px;
     float: left;
     position: relative;
     top: 0;
+    max-width: 98%; /* because of the padding and border */
 }
 
 /* this block has larger thumbs */
