--- a/sites/all/themes/news_center/css/media.css
+++ b/sites/all/themes/news_center/css/media.css
@@ -36,8 +36,8 @@
     }
 
     #logo {
-        width: inherit;
-        margin: 0 1em;
+        width: 70%;
+        margin: 0 auto;
         display: block;
     }
 
@@ -376,25 +376,9 @@
     .views_slideshow_cycle_main {
         height: 650px;
     }
-
-    .region-content0 {
-        display: flex;
-        justify-content: flex-start;
-        flex-wrap: wrap;
-    }
-
-    .region-content0 .block-views.odd {
-        width: 47%;
-        margin-right: 3%;
-    }
-
-    .region-content0 .block-views.even {
-        width: 47%;
-        margin-left: 3%;
-    }
-
 }
 
+/* this is where content0 and content1 break to one column */
 @media only screen and (max-width: 700px) {
 
     /* slideshow */
@@ -410,6 +394,23 @@
 
     .views_slideshow_cycle_main {
         height: 550px;
+    }
+
+    /* three columns to one column */
+    .region-content0 .block-views.odd,
+    .region-content0 .block-views.even {
+        width: 100%;
+        margin: 0;
+    }
+
+    /* because of the picture */
+    .region-content0 .block-views.odd .views-row {
+        min-height: 171px;
+    }
+
+    /* three columns to one column */
+    .region-content1 .block-views {
+        width: 100%;
     }
 
     /* footer one column */
