--- a/sites/ouraynews.com/local.css
+++ b/sites/ouraynews.com/local.css
@@ -8,3 +8,9 @@
     flex-wrap: wrap;
     justify-content: space-between;
 }
+
+.region-sidebar-second .block-simpleads > div > div > div > div {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
