--- a/sites/backroadsnews.com/themes/backroadsnews/css/mobile-landscape-layout.css
+++ b/sites/backroadsnews.com/themes/backroadsnews/css/mobile-landscape-layout.css
@@ -147,6 +147,8 @@ body.front h1 {
     border: medium none !important;
 }
 
+/* SlideShow Block Styles */
+
 .image-show {
     background: none repeat scroll 0 0 #000000;
     color: #AAAAAA;
@@ -172,7 +174,7 @@ body.front h1 {
     color: #FFFFFF;
     position: absolute;
     top: 296px;
-    width: 460px;
+    width: 480px;
     z-index: 200;
 }
 
@@ -280,26 +282,33 @@ body.front h1 {
 .views_slideshow_cycle_main {
     background: none repeat scroll 0 0 #333333;
     height: 520px;
-    width: 460px;
+    width: 480px;
 }
 
 .view-id-home_page .views-slideshow-controls-bottom {
     top: 454px;
-    left: 50px;
-    width: 400px;
+    left: 0;
+    width: 480px;
     display: flex;
     justify-content: space-around;
 }
 
+#widget_pager_bottom_home_page-block {
+    width: 470px;
+    display: flex;
+    justify-content: space-between;
+    margin: 0 5px;
+}
+
 .view-id-home_page .views-slideshow-controls-bottom .views-slideshow-pager-field-item img {
     height: auto;
-    margin-left: -23px;
+    margin-left: 0;
     width: 92px;
 }
 
 .view-id-home_page .views-slideshow-controls-bottom .views-slideshow-pager-field-item {
     display: inline-block;
-    margin-right: -3px;
+    margin-right: 0;
     overflow: hidden;
     padding: 5px 4px 14px 5px;
     opacity: 0.4;
@@ -328,8 +337,10 @@ body.front h1 {
 #views_slideshow_cycle_main_home_page-block .views-slideshow-cycle-main-frame-row-item .views-field-field-image img {
     height: auto;
     margin-left: 23px;
-    width: 458px;
+    width: 480px;
 }
+
+/*end slideshow style*/
 
 #block-views-most-popular-block {
     float: left;
