--- a/sites/backroadsnews.com/themes/backroadsnews/css/screen-layout.css
+++ b/sites/backroadsnews.com/themes/backroadsnews/css/screen-layout.css
@@ -233,13 +233,19 @@ body.front h1 {
 #views_slideshow_cycle_main_home_page-block .views-slideshow-cycle-main-frame-row-item {
     border: 1px solid #333333;
     height: 445px;
-    width: 460px;
+    width: 462px;
     border-bottom: none;
     overflow: hidden;
 }
 
 #views_slideshow_cycle_main_home_page-block .views-slideshow-cycle-main-frame-row-item .views-field-field-image {
-    margin-left: -23px;
+    margin-left: 0;
+}
+
+#views_slideshow_cycle_main_home_page-block .views-slideshow-cycle-main-frame-row-item .views-field-field-image img {
+    height: auto;
+    margin-left: 0;
+    width: 462px;
 }
 
 #views_slideshow_cycle_main_home_page-block .views-slideshow-cycle-main-frame .slideshow-overlay {
@@ -248,7 +254,7 @@ body.front h1 {
     color: #FFFFFF;
     position: absolute;
     z-index: 200;
-    width: 460px;
+    width: 462px;
 }
 
 #views_slideshow_cycle_main_home_page-block .views-slideshow-cycle-main-frame .slideshow-overlay a {
@@ -281,7 +287,7 @@ body.front h1 {
     display: block;
     padding: 12px;
     text-shadow: 1px 1px 1px #000000;
-    width: 436px;
+    width: 462px;
     z-index: 1;
 }
 
@@ -324,31 +330,33 @@ body.front h1 {
 }
 
 .bottom-shadow {
-    background: url("../images/bottom-shadow.png") repeat-x scroll 0 0 transparent;
-    bottom: -6px;
-    height: 6px;
-    position: absolute;
-    width: 460px;
-    z-index: 9;
+    display: none;
+    visibility: hidden;
 }
 
 .views_slideshow_cycle_main {
     background: none repeat scroll 0 0 #333333;
-    height: 295px;
-    padding-bottom: 150px;
+    height: 575px;
+    padding-bottom: 0;
     width: 462px;
 }
 
 .view-id-home_page .views-slideshow-controls-bottom {
-    border: 1px solid #333333;
-    width: 460px;
+    border: none;
+    width: 462px;
     border-top: none;
     height: 60px;
+    left: 0;
+    top: 515px;
+}
+
+#widget_pager_bottom_home_page-block {
+    width: 462px;
 }
 
 .view-id-home_page .views-slideshow-controls-bottom .views-slideshow-pager-field-item {
     display: inline-block;
-    margin-right: -3px;
+    margin-right: 0;
 }
 
 .view-id-home_page .views-slideshow-controls-bottom .views-slideshow-pager-field-item.active .selector {
@@ -369,8 +377,10 @@ body.front h1 {
 }
 
 #views_slideshow_pager_field_item_bottom_home_page-block_4 .views-field-field-image .views-content-field-image {
-    width: 85px;
+    width: 92px;
 }
+
+/* end slideshow style*/
 
 #block-views-home-page-block {
     float: left;
