--- a/sites/backroadsnews.com/themes/backroadsnews/css/tablet-layout.css
+++ b/sites/backroadsnews.com/themes/backroadsnews/css/tablet-layout.css
@@ -151,6 +151,8 @@ body.front h1 {
     margin-left: 14px !important;
 }
 
+/* SlideShow Block Styles */
+
 .image-show {
     background: none repeat scroll 0 0 #000000;
     color: #AAAAAA;
@@ -166,7 +168,7 @@ body.front h1 {
 #views_slideshow_cycle_main_home_page-block .views-slideshow-cycle-main-frame-row-item {
     border: 1px solid #333333;
     height: 295px;
-    width: 745px;
+    width: 748px;
     border-bottom: none;
     padding-bottom: 0;
 }
@@ -177,7 +179,7 @@ body.front h1 {
     color: #FFFFFF;
     position: absolute;
     top: 296px;
-    width: 745px;
+    width: 748px;
     z-index: 200;
 }
 
@@ -209,7 +211,7 @@ body.front h1 {
     display: block;
     height: auto;
     overflow: visible;
-    width: 724px;
+    width: 748px;
 }
 
 #views_slideshow_cycle_main_home_page-block .views-slideshow-cycle-main-frame .views-field-body-1 {
@@ -217,7 +219,7 @@ body.front h1 {
     display: block;
     padding: 12px;
     text-shadow: 1px 1px 1px #000000;
-    width: 722px;
+    width: 724px;
     z-index: 1;
 }
 
@@ -262,10 +264,10 @@ body.front h1 {
 
 .bottom-shadow {
     background: url("../images/bottom-shadow.png") repeat-x scroll 0 0 transparent;
-    bottom: -6px;
+    bottom: 0;
     height: 6px;
     position: absolute;
-    width: 746px;
+    width: 748px;
     z-index: 9;
     display: block;
 }
@@ -273,7 +275,11 @@ body.front h1 {
 .views_slideshow_cycle_main {
     background: none repeat scroll 0 0 #333333;
     height: 525px;
-    width: 747px;
+    width: 748px;
+}
+
+#widget_pager_bottom_home_page-block {
+    width: 748px;
 }
 
 .view-id-home_page .views-slideshow-controls-bottom {
@@ -281,8 +287,8 @@ body.front h1 {
     height: 60px;
     margin-top: 0;
     position: absolute;
-    left: 84px;
-    width: 700px;
+    left: 0;
+    width: 748px;
     z-index: 200;
     top: 464px;
 }
@@ -324,6 +330,8 @@ body.front h1 {
 #views_slideshow_pager_field_item_bottom_home_page-block_4 .views-field-field-image .views-content-field-image {
     width: auto;
 }
+
+/* end slideshow style */
 
 #block-views-most-popular-block .view-most-popular {
     border-left: none;
