--- a/sites/backroadsnews.com/themes/backroadsnews/css/tablet-layout.css
+++ b/sites/backroadsnews.com/themes/backroadsnews/css/tablet-layout.css
@@ -166,7 +166,7 @@ body.front h1 {
 }
 
 #views_slideshow_cycle_main_home_page-block .views-slideshow-cycle-main-frame-row-item {
-    border: 1px solid #333333;
+    border: none;
     height: 295px;
     width: 748px;
     border-bottom: none;
