--- a/sites/backroadsnews.com/themes/backroadsnews/css/mobile-landscape-layout.css
+++ b/sites/backroadsnews.com/themes/backroadsnews/css/mobile-landscape-layout.css
@@ -331,7 +331,7 @@ body.front h1 {
 }
 
 #views_slideshow_cycle_main_home_page-block .views-slideshow-cycle-main-frame-row-item .views-field-field-image {
-    margin-left: -23px;
+    margin-left: 0;
 }
 
 #views_slideshow_cycle_main_home_page-block .views-slideshow-cycle-main-frame-row-item .views-field-field-image img {
