--- a/sites/backroadsnews.com/themes/backroadsnews/css/tablet-layout.css
+++ b/sites/backroadsnews.com/themes/backroadsnews/css/tablet-layout.css
@@ -318,8 +318,8 @@ body.front h1 {
 
 #views_slideshow_cycle_main_home_page-block .views-slideshow-cycle-main-frame-row-item .views-field-field-image img {
     height: auto;
-    margin-left: 24px;
-    width: 745px;
+    margin-left: 0;
+    width: 748px;
 }
 
 .view-id-home_page .views-slideshow-controls-bottom .views-slideshow-pager-field-item img {
