--- a/sites/backroadsnews.com/themes/backroadsnews/css/screen-layout.css
+++ b/sites/backroadsnews.com/themes/backroadsnews/css/screen-layout.css
@@ -218,6 +218,8 @@ body.front h1 {
     padding-left: 15px;
 }
 
+/* SlideShow Block Styles */
+
 .image-show {
     background: none repeat scroll 0 0 #000000;
     color: #AAAAAA;
