--- a/sites/all/themes/fredtwentytwo/css/screen-layout.css
+++ b/sites/all/themes/fredtwentytwo/css/screen-layout.css
@@ -75,6 +75,10 @@ body.front h1 {
     padding: 0px;
 }
 
+.views-field views-field-body-1  .field-content {
+    color: #ffffff;
+}
+
 .views-field-title .field-content a {
     color: #333;
     font-size: 18px;
@@ -226,7 +230,7 @@ body.front h1 {
 #views_slideshow_cycle_main_home_page-block .views-slideshow-cycle-main-frame-row-item {
     border: none;
     height: 445px;
-    width: 462px;
+    width: 468px;
     border-bottom: none;
     overflow: hidden;
 }
@@ -238,7 +242,7 @@ body.front h1 {
 #views_slideshow_cycle_main_home_page-block .views-slideshow-cycle-main-frame-row-item .views-field-field-image img {
     height: auto;
     margin-left: 0;
-    width: 462px;
+    width: 468px;
 }
 
 #views_slideshow_cycle_main_home_page-block .views-slideshow-cycle-main-frame .slideshow-overlay {
@@ -247,7 +251,7 @@ body.front h1 {
     color: #FFFFFF;
     position: absolute;
     z-index: 200;
-    width: 462px;
+    width: 468px;
 }
 
 #views_slideshow_cycle_main_home_page-block .views-slideshow-cycle-main-frame .slideshow-overlay a {
@@ -280,7 +284,7 @@ body.front h1 {
     display: block;
     padding: 12px;
     text-shadow: 1px 1px 1px #000000;
-    width: 462px;
+    width: 468px;
     z-index: 1;
 }
 
@@ -331,12 +335,12 @@ body.front h1 {
     background: none repeat scroll 0 0 #333333;
     height: 575px;
     padding-bottom: 0;
-    width: 462px;
+    width: 468px;
 }
 
 .view-id-home_page .views-slideshow-controls-bottom {
     border: none;
-    width: 462px;
+    width: 468px;
     border-top: none;
     height: 60px;
     left: 0;
@@ -344,7 +348,7 @@ body.front h1 {
 }
 
 #widget_pager_bottom_home_page-block {
-    width: 462px;
+    width: 468px;
 }
 
 .view-id-home_page .views-slideshow-controls-bottom .views-slideshow-pager-field-item {
