--- a/sites/all/themes/fredtwentytwo/css/screen-layout.css
+++ b/sites/all/themes/fredtwentytwo/css/screen-layout.css
@@ -34,17 +34,6 @@ body.front h1 {
     display: block;
 }
 
-#logo {
-    margin-top: 10px;
-    width: 700px;
-    text-align: center;
-    float: left;
-}
-
-#logo img {
-    width: 700px;
-}
-
 #page-wrapper {
     max-width: 1040px;
     min-width: 1040px;
@@ -83,20 +72,9 @@ body.front h1 {
     width: 1020px;
 }
 
-#header .region-header {
-    background: none repeat scroll 0 0 transparent;
-    height: 22px;
-    padding-top: 13px;
-}
-
 #block-block-12 {
     float: left;
     margin-left: 10px;
-}
-
-#block-simpleads-ad-groups-13 {
-    float: left;
-    padding-right: 8px;
 }
 
 .sidebar-second #content {
@@ -118,10 +96,6 @@ body.front h1 {
 
 .region-sidebar-second .section {
     margin: 0 0 0 22px;
-}
-
-#block-multiblock-1 {
-    display: none;
 }
 
 .region-top-area {
@@ -154,7 +128,6 @@ body.front h1 {
     display: block;
     position: inherit;
     z-index: 99;
-    height: 24px;
     clear: left;
 }
 
@@ -167,6 +140,7 @@ body.front h1 {
     text-transform: uppercase;
     width: auto;
     border-right: 1px solid #003366;
+    background: none repeat scroll 0 0 transparent;
 }
 
 #block-superfish-1 ul li a {
@@ -174,8 +148,6 @@ body.front h1 {
     display: block;
     font-weight: 600;
     font-size: 14px;
-    height: 22px;
-    line-height: 20px;
     margin-top: 0;
     padding: 0 17px;
     text-decoration: none;
@@ -194,13 +166,13 @@ body.front h1 {
 #block-superfish-1 ul li a.active, #block-menu-menu-news-categories ul li a:hover {
     background: none repeat scroll 0 0 transparent;
     height: 30px;
-    color: #333333;
+    color: #e8e882;
     padding-top: 5px;
 }
 
 #block-superfish-1 a.active-trail .active li {
     background: none repeat scroll 0 0 #000033;
-    color: #333333;
+    color: #e8e882;
     padding-top: 0;
     padding-left: 15px;
 }
@@ -278,6 +250,10 @@ body.front h1 {
     text-shadow: 1px 1px 1px #000000;
     width: 444px;
     z-index: 1;
+}
+
+#views_slideshow_cycle_main_home_page-block .field-content {
+    color: #ffffff;
 }
 
 #views_slideshow_cycle_main_home_page-block .views-field-comment-count, #views_slideshow_cycle_main_home_page-block .views-field-created, #views_slideshow_cycle_main_home_page-block .views-field-term-node-tid, #views_slideshow_cycle_main_home_page-block .views-field-name, #views_slideshow_cycle_main_home_page-block .views-field-field-rate {
