fred twenty two

--- a/sites/all/themes/fredtwentytwo/css/news_center.css
+++ b/sites/all/themes/fredtwentytwo/css/news_center.css
@@ -121,7 +121,7 @@ img {
 #block-menu-menu-secondary-menu {
     margin-top: 7px;
     float: right;
-    height: 24px;
+    min-height: 24px;
 }
 
 #block-menu-menu-secondary-menu ul {
