--- a/sites/backroadsnews.com/local.css
+++ b/sites/backroadsnews.com/local.css
@@ -20,7 +20,7 @@ body {
 
 @media only screen and (max-device-width: 979px) and (max-width: 979px) {
     body {
-        background: #ffffff;
+        background: none #ffffff;
     }
 }
 
