--- a/sites/backroadsnews.com/local.css
+++ b/sites/backroadsnews.com/local.css
@@ -18,7 +18,7 @@ body {
     }
 }
 
-@media only screen and (max-device-width: 979px) and (max-width: 979px) {
+@media only screen and (max-width: 979px) {
     body {
         background: none #ffffff;
     }
