--- a/sites/backroadsnews.com/local.css
+++ b/sites/backroadsnews.com/local.css
@@ -2,6 +2,7 @@ body {
     background: url(/sites/all/themes/fredtwentytwo/images/body.png) repeat-x #CBCBCB;
 }
 
+/* to override screen.css */
 @media only screen and (min-device-width: 980px) and (min-width: 980px), (max-device-width: 1024px) and (min-width: 1024px) and (orientation: landscape) {
 
     #block-superfish-1 ul {
@@ -15,6 +16,10 @@ body {
 
     #block-superfish-1 ul li a {
         color: #FFFFFF;
+    }
+
+    #block-superfish-1 ul li a.active {
+        color: #333333;
     }
 }
 
