fred twenty two

--- a/sites/all/themes/fredtwentytwo/css/screen-layout.css
+++ b/sites/all/themes/fredtwentytwo/css/screen-layout.css
@@ -172,7 +172,7 @@ body.front h1 {
 
 #block-superfish-1 a.active-trail .active li {
     background: none repeat scroll 0 0 #000033;
-    color: #e8e882;
+    color: #ffa4a4;
     padding-top: 0;
     padding-left: 15px;
 }
