--- a/sites/all/themes/fredtwentytwo/css/screen-layout.css
+++ b/sites/all/themes/fredtwentytwo/css/screen-layout.css
@@ -166,7 +166,7 @@ body.front h1 {
 #block-superfish-1 ul li a.active, #block-menu-menu-news-categories ul li a:hover {
     background: none repeat scroll 0 0 transparent;
     height: 30px;
-    color: #e8e882;
+    color: #ffa4a4;
     padding-top: 5px;
 }
 
