--- a/sites/all/themes/news_center/css/media.css
+++ b/sites/all/themes/news_center/css/media.css
@@ -153,7 +153,7 @@
 
     /* Main Menu */
     #superfish-1 {
-        width: 100%;
+        border-left: 1px solid #000000;
     }
 
     #block-superfish-1, #superfish-1, .superfish-1 {
