--- a/sites/all/themes/cni/css/responsive.css
+++ b/sites/all/themes/cni/css/responsive.css
@@ -2,8 +2,18 @@
 @media only screen and (min-width: 959px) {
 
     /* main menu */
+    #block-superfish-1 .content {
+        width: 100%;
+    }
+
     #main-menu ul.menu {
-        margin: 0;
+        margin: 0 auto;
+        max-width: 960px;
+        white-space: nowrap;
+    }
+
+    #main-menu ul.menu li, .sf-menu.sf-style-space {
+        float: none;
     }
 
     #main-menu ul.menu li ul {
@@ -57,10 +67,22 @@
         width: 286px;
     }
 
+    /* galleria */
+    .galleria-theme-classic .galleria-info {
+        left: 0;
+        width: 215px;
+    }
+
 }
 
 /* desktop browsers */
 @media only screen and (max-width: 958px) and (min-width: 768px) {
+
+
+    /* main menu */
+    #block-superfish-1 .content {
+        width: 100%;
+    }
 
     #block-superfish-1 ul #menu-1797-1 {
         display: none;
@@ -68,11 +90,15 @@
 
     #main-menu ul.menu {
         margin: 0;
+        white-space: nowrap;
+    }
+
+    #main-menu ul.menu li, .sf-menu.sf-style-space {
+        float: none;
     }
 
     #main-menu ul.menu li a, #main-menu ul.menu li li a, #main-menu ul.menu li li a.active {
         padding: 0 7px;
-        font-size: 0.8em;
     }
 
     #main-menu ul.menu li ul {
@@ -168,7 +194,13 @@
     }
 
     .container_12 #postscript .grid_4 {
-        width: 222px;
+        width: 30%;
+    }
+
+    /* galleria */
+    .galleria-theme-classic .galleria-info {
+        left: 0;
+        width: 150px;
     }
 
 }
@@ -290,15 +322,6 @@
         margin-left: 0;
         margin-bottom: 10px;
         background: none;
-    }
-
-    .region-postscript-2 {
-        display: none;
-        visibility: hidden;
-    }
-
-    .region-postscript-4 {
-        margin-top: 1em;
     }
 
     /* weather block */
@@ -464,6 +487,13 @@
         visibility: hidden;
     }
 
+    /* galleria fixes */
+    .galleria-theme-classic .galleria-info {
+        width: 100%;
+        top: 10px;
+        left: 0;
+    }
+
 }
 
 /* smaller phones */
@@ -531,7 +561,7 @@
     }
 
     .video .node-teaser .node-content-wrapper {
-        margin-left: 0px;
+        margin-left: 0;
     }
 
     .node-teaser .field-name-field-video iframe {
@@ -601,10 +631,6 @@
         width: 49% !important;
     }
 
-    .region-postscript-4 {
-        margin-top: 1em;
-    }
-
     /* weather block */
     #block-block-1 .block-inner {
         border: none;
@@ -617,6 +643,12 @@
         visibility: hidden;
     }
 
+    /* galleria fixes */
+    .galleria-theme-classic .galleria-info {
+        width: 100%;
+        top: 10px;
+        left: 0;
+    }
 }
 
 /* less granular switch for big and small */
@@ -625,6 +657,11 @@
     #block-system-user-menu {
         display: none;
         visibility: hidden;
+    }
+
+    /* space for Menus and Follow Blocks */
+    .region-postscript-2, .region-postscript-3 {
+        margin-top: 1em;
     }
 
 }
