--- a/sites/acadiaparishtoday.etypegoogle8.com/local.css
+++ b/sites/acadiaparishtoday.etypegoogle8.com/local.css
@@ -1,24 +1,3 @@
-/* logo */
-.site-logo {
-    width: 100%;
-    margin: 0 auto;
-    max-width: 464px;
-}
-
-.site-logo img {
-    width: 100%;
-    max-width: 464px;
-}
-
-/* main-menu background-color */
-#block-superfish-1 {
-    background-color: #68000e;
-}
-
-.sf-menu.sf-style-space li, .sf-menu.sf-style-space li li, .sf-menu.sf-style-space li li li, .sf-menu.sf-style-space.sf-navbar {
-    background: #68000e;
-}
-
 /* SIMPLE ADS
 --------------------------------------------------------------------------*/
 
@@ -43,14 +22,18 @@
 @media only screen and (max-width: 767px) {
 
     /* Hide larger DFP ads on non full-size browsers */
-
+    #block-block-46 {
+        display: none;
+        visibility: hidden;
+    }
 }
 
 @media only screen and (min-width: 768px) {
 
-    /* etype network df ad in footer */
+    /* etype network dfp ad in footer */
     #block-block-46 {
-
+        width: 728px;
+        margin: 0 auto 20px;
     }
 
 }
