--- a/sites/indyrepnews.com/local.css
+++ b/sites/indyrepnews.com/local.css
@@ -3,3 +3,18 @@
 #block-views-breaking-news-block {display:block; width:728px; height: 60px; background-color:#FF0000; margin-left:-10px; margin-bottom: 8px; overflow:hidden;}
 #block-views-breaking-news-block a {color: #ffffff; font-size: 18px; line-height:24px; margin-left: 15px;}
 #block-views-breaking-news-block h2.block-title {border-bottom: 1px dashed #ffffff; color: #ffffff; font-family: "Open Sans",sans-serif; font-size: 24px; font-weight: 300;}
+
+/* style to keep main nav bar from breaking to two lines */
+
+#block-superfish-1 ul li a {
+    background: transparent none repeat scroll 0 0;
+    border-left: medium none;
+    border-right: medium none;
+    color: #ffffff;
+    display: block;
+    font-size: 12px;
+    font-weight: 600;
+    margin-top: 0;
+    padding: 0 17px;
+    text-decoration: none;
+}
