--- a/sites/all/modules/views_slideshow/contrib/views_slideshow_cycle/views_slideshow_cycle.css
+++ b/sites/all/modules/views_slideshow/contrib/views_slideshow_cycle/views_slideshow_cycle.css
@@ -5,40 +5,40 @@
 .views-slideshow-controls-bottom,
 .views-slideshow-controls-top,
 .views_slideshow_cycle_image_count {
-  display: none;
+    display: none;
 }
 
 .views-slideshow-cycle-processed .views-slideshow-controls-bottom,
 .views-slideshow-cycle-processed .views-slideshow-controls-top {
-  display: block;
+    display: block;
 }
 
-.views-slideshow-cycle-main-frame,
+/*.views-slideshow-cycle-main-frame,
 .views-slideshow-cycle-main-frame div,
 .views-slideshow-cycle-main-frame img {
   max-width: 100%;
-}
+}*/
 
 
 /* Pager Settings */
 
 .views-slideshow-pager-fields img {
-  max-width: 75px;
-  max-height: 75px;
+    max-width: 75px;
+    max-height: 75px;
 }
 
 .views-slideshow-pager-fields div {
-  display: inline;
+    display: inline;
 }
 
 .views-slideshow-pager-fields > div{
-  padding-left: 10px;
+    padding-left: 10px;
 }
 
 .views-slideshow-pager-fields .active img {
-  border: 3px solid #000;
+    border: 3px solid #000;
 }
 
 .views-slideshow-pager-fields .active {
-  text-decoration: underline;
+    text-decoration: underline;
 }
