--- a/sites/nebraskalivingtimes.com/local.css
+++ b/sites/nebraskalivingtimes.com/local.css
@@ -1,8 +1,8 @@
 /* horrible hack to deal with sub pages apprearing randomly */
 /* TODO fix this */
 
-.page-taxonomy .content form,
+/*.page-taxonomy .content form,
 .page-taxonomy .content fieldset {
     display: none;
     visibility: hidden;
-}
+}*/
